<resources>
    <string name="app_name">Daily Alarm</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="about_us">About Us</string>
    <string name="github_mohammadreza">Github: Mohammadreza Fekri</string>
    <string name="project_github">Project github</string>
    <string name="stop_service">Stop Service</string>
    <string name="start_service">Start Service</string>
    <string name="start_foreground">Start Foreground ser</string>
    <string name="start_background">Start Background ser</string>
    <string name="stop_background_ser">Stop Background Ser</string>
    <string name="stop_foreground">Stop Foreground</string>
    <string name="line_design">*******************************************************************</string>
    <string name="contact">Contact us</string>
    <string name="github">Github</string>
    <string name="github_hasti">Github: Hasti Mohammadi</string>
    <string name="e_mail_mohammadreza">fekri.mohammadreza86@gmail.com</string>
    <string name="e_mail_hasti">hasti.m.lse.bbb@gmail.com</string>
    <string name="a_little_bit_about_us">a little bit about us:</string>
    <string name="text">Hello!Thank you so much for choosing this app♥️ So Mohammad reza and I are two junior programmers who are very interested in Android programming and we do our best to gain skills in this basinSo if you would like to get in touch with us, you can GitHub and email us with</string>
    <string name="email">email</string>
    <string name="mohammadreza_fekri">Mohammadreza Fekri</string>
    <string name="hasti_mohammadi">Hasti Mohammadi</string>
</resources>
