<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/line_design"
        android:layout_marginTop="50dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/about_us_text"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/about_us_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/about_us"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/project_github"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:gravity="center"
        android:layout_marginStart="5dp"
        android:text="@string/a_little_bit_about_us"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_us_text" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/text"
        android:textColor="@color/black"
        android:layout_marginStart="5dp"
        android:textSize="14sp"
        android:gravity="center"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/project_github" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/line_design"
        android:layout_marginTop="200dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/about_us_text"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/e_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contact" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/e_mali_mohammadreza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="100dp"
        android:gravity="end"
        android:padding="1dp"
        android:text="@string/e_mail_mohammadreza"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/e_mail"
        tools:ignore="MissingConstraints" />

    Hasti, [07-May-22 5:14 PM]
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/e_mali_hasti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="150dp"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:padding="1dp"
        android:text="@string/e_mail_hasti"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/e_mali_mohammadreza" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/line_design"
        android:layout_marginTop="350dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/about_us_text"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/github"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/e_mali_hasti" />



    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/github_mohamad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="4dp"
        android:text="@string/mohammadreza_fekri"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/github" />



    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/github_hasti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:padding="4dp"
        android:text="@string/hasti_mohammadi"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/github" />

</androidx.constraintlayout.widget.ConstraintLayout>