<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background">

    </androidx.appcompat.widget.AppCompatImageView>

    <HorizontalScrollView
        android:id="@+id/scroll_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@id/image"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_start"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="95dp"
                app:cardCornerRadius="18dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/start"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_launcher_background" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_pause"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                app:cardCornerRadius="18dp"
                app:layout_constraintStart_toEndOf="@id/card_start"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/pause"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_launcher_background" />
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </HorizontalScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_baseline_add_24"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/about_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/add_fab"
        app:layout_constraintEnd_toEndOf="@+id/add_fab"
        app:layout_constraintStart_toStartOf="@+id/add_fab"
        app:srcCompat="@drawable/ic_baseline_info_24" />

    <TextView
        android:id="@+id/about_us_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/about_us"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/about_us"
        app:layout_constraintEnd_toStartOf="@+id/about_us"
        app:layout_constraintTop_toTopOf="@+id/about_us" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start_service_back"
        android:text="@string/start_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/scroll_first"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="18dp"
         android:layout_marginTop="20dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/start_service_for"
            android:text="@string/start_foreground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/start_service_back"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/stop_service_back"
        android:text="@string/stop_background_ser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/start_service_for"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/stop_service_for"
        android:text="@string/stop_foreground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/stop_service_back"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/stop_service_back"
        android:layout_marginStart="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>